token exchange flow

--- a/AuthorizationCode/AC_ClientWebApp/Views/Shared/_Layout.cshtml
+++ b/AuthorizationCode/AC_ClientWebApp/Views/Shared/_Layout.cshtml
@@ -19,10 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Values" asp-action="GetName">Hit Microservice 1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Values" asp-action="GetName">Hit Microservice 1</a> 
+                        </li>
+                        <li>
+                            <label>  ||  </label>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Values" asp-action="Weather">Hit Microservice 1 -> Microservice 2</a>
                         </li>
                     </ul>
                 </div>
